# protobuf-javascript

./: .bazelignore  .bazelrc  .gitignore  BUILD  BUILD.bazel  MODULE.bazel  README.md  SECURITY.md  WORKSPACE  WORKSPACE.bzlmod  asserts.js  bytestring.js  debug.js  debug_test.js  extension_field_binary_info.js  extension_field_info.js  firebase projects:list  generate-version-header.js  google-protobuf.js  gulpfile.js  internal_bytes.js  internal_options.js  internal_public.js  jasmine.json  map.js  maps_test.js  message.js  message_test.js  node_loader.js  package-lock.json  package.json  proto3_test.js  protobuf_javascript_release.bzl  test_bootstrap.js  unsafe_bytestring.js  update-bazel-versions.js
.bcr/: metadata.template.json  presubmit.yml  source.template.json
.bcr/patches/: remove-dist.patch
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: limited-issue-and-fr-support.md
.github/actions/setup-protoc-env/: action.yml  index.js  package-lock.json  package.json
.github/workflows/: build-windows.yml  build.yml  ci.yaml  codeql.yml  publish.yaml  release.yaml  release_prep.sh  scorecard.yml  scorecards.yml
binary/: any_field_type.js  arith.js  arith_test.js  binary_constants.js  bytesource.js  bytesource_alias.js  constants.js  decoder.js  decoder_alias.js  decoder_test.js  encoder.js  encoder_alias.js  errors.js  internal_buffer.js  message_test.js  proto_test.js  reader.js  reader_alias.js  reader_test.js  repeated_field_type.js  scalar_field_type.js  test_utils.js  utf8.js  utils.js  utils_test.js  writer.js  writer_alias.js  writer_test.js
commonjs/: export.js  export_testdeps.js  import_test.js  jasmine.json  rewrite_tests_for_commonjs.js  strict_test.js
commonjs/test6/: test6.proto
commonjs/test7/: test7.proto
compatibility_tests/v3.0.0/: debug_test.js  message_test.js  proto3_test.js  proto3_test.proto  test.proto  test4.proto
compatibility_tests/v3.0.0/binary/: decoder_test.js  proto_test.js  reader_test.js  utils_test.js  writer_test.js
compatibility_tests/v3.0.0/commonjs/: import_test.js
compatibility_tests/v3.1.0/: data.proto  debug_test.js  maps_test.js  message_test.js  proto3_test.js  test.proto  test2.proto  test3.proto  test5.proto  testbinary.proto  testempty.proto
compatibility_tests/v3.1.0/binary/: arith_test.js  decoder_test.js  proto_test.js  reader_test.js  writer_test.js
conformance/: failing_tests.txt  package.json  runner.js
docs/: index.md
e2e/bcr/: BUILD.bazel  MODULE.bazel  README.md  simple.proto  simple_js_test.sh
experimental/runtime/kernel/: kernel_compatibility_test.js  kernel_repeated_test.js  writer.js
generator/: BUILD  BUILD.bazel  generate-version-header.cc  js_generator.cc  js_generator.h  protoc-gen-js.cc  well_known_types_embed.cc  well_known_types_embed.h
protoc_plugin/: .gitignore  README.md  cli.js  download-protoc-gen-js.js  index.js  package-lock.json  package.json
protos/: data.proto  proto3_test.proto  test.proto  test10.proto  test11.proto  test12.proto  test13.proto  test14.proto  test15.proto  test2.proto  test3.proto  test4.proto  test5.proto  test8.proto  test9.proto  testbinary.proto  testempty.proto  testlargenumbers.proto
test-jest/: README.md
test-jest/commonjs-strict/: flat-strict.test.js
test-jest/commonjs-strict/protos/: proto.proto  proto2.proto
toolchain/: BUILD.bazel  cc_toolchain_config.bzl  toolchains.bazelrc
