# Protobuf JS runtime
#
# See also code generation logic under generator/

config_setting(
    name = "x64_x86_windows",
    values = {"cpu": "x64_x86_windows"},
)

config_setting(
    name = "x64_windows",
    values = {"cpu": "x64_windows"},
)

config_setting(
    name = "k8",
    values = {"cpu": "k8"},
)

config_setting(
    name = "darwin_arm64",
    values = {"cpu": "darwin_arm64"},
)

config_setting(
    name = "darwin_x86_64",
    values = {"cpu": "darwin_x86_64"},
)

filegroup(
    name = "javascript",
    srcs = [
        "asserts.js",
        "binary/any_field_type.js",
        "binary/arith.js",
        "binary/binary_constants.js",
        "binary/bytesource.js",
        "binary/bytesource_alias.js",
        "binary/decoder.js",
        "binary/decoder_alias.js",
        "binary/encoder.js",
        "binary/encoder_alias.js",
        "binary/errors.js",
        "binary/internal_buffer.js",
        "binary/reader.js",
        "binary/reader_alias.js",
        "binary/repeated_field_type.js",
        "binary/scalar_field_type.js",
        "binary/test_utils.js",
        "binary/utf8.js",
        "binary/utils.js",
        "binary/writer.js",
        "binary/writer_alias.js",
        "bytestring.js",
        "debug.js",
        "internal_bytes.js",
        "internal_options.js",
        "internal_public.js",
        "map.js",
        "message.js",
        "unsafe_bytestring.js",
    ],
    visibility = ["//visibility:public"],
)
