cc_binary(
    name = "protoc-gen-js",
    srcs = [
        "js_generator.cc",
        "js_generator.h",
        "protoc-gen-js.cc",
        "well_known_types_embed.cc",
        "well_known_types_embed.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@abseil-cpp//absl/strings:str_format",
        "@com_google_protobuf//:protobuf",
        "@com_google_protobuf//:protoc_lib",
    ],
)
